关闭议题提交入口

--- a/src/data/_message.yaml
+++ b/src/data/_message.yaml
@@ -30,7 +30,7 @@ home_intro: >
   迄今已是<b>第四届</b>, 继续由 CPyUG/TopGeek/GDG 协同,在 <b>北京/上海/珠海/苏州/杭州</b> 五城联办.
   无论使用哪种,都可以/应该参加这场完全由社区组织的欢乐集会;-)
   <ul>
-  <li><strong><a href="/proposals.html">主题/工作坊提交入口</a></strong></li>
+  <li><del>主题提交</del><strong>(已经集满,若有不满请直接联系大会)</strong></li>
   <li>门票策略: <ul>
   <li>0RMB    学生票, 含所有礼品/茶点/午餐 <sup>为支持学生,嘦有效学生证即可入场,但也要预订门票以便统计人数吼;-)</sup></li>
   <li>100RMB  普通票, 无发票, 待遇同学生票 <b>注意: 11月1日之前</b>购买为<b>50RMB</b></li>
