--- a/src/data/_speakers.yaml
+++ b/src/data/_speakers.yaml
@@ -37,7 +37,7 @@ id_caibin:
   intro: "产品开发工程师 @ 豆瓣东西"
   topic:
     title:  产品开发在豆瓣 
-    preview: "通过讲述豆瓣东西的开发经历，介绍一下豆瓣工程师在一个产品开发过程中的工作方式"
+    preview: "通过讲述豆瓣东西的开发经历,介绍一下豆瓣工程师在一个产品开发过程中的工作方式"
 
 id_dongwei:
   name: 董伟
@@ -598,7 +598,7 @@ id_baoyongcheng:
   city: 苏州
   city_en: Suzhou
   avatar: http://pyconcn.qiniudn.com/zoomquiet/stuff14/id/sz-id_baoyongcheng.JPG?imageView2/2/h/80
-  intro: python爱好者，使用python开发过 土豆网CDN系统，土豆网视频转码系统，土豆网上线发包系统，swift存储系统，现在正在从事京东云计算 
+  intro: python爱好者,使用python开发过 土豆网CDN系统,土豆网视频转码系统,土豆网上线发包系统,swift存储系统,现在正在从事京东云计算 
   topic: 
     title: python之于云计算 
     preview: ...
@@ -609,10 +609,10 @@ id_laoqi:
   city: 苏州
   city_en: Suzhou
   avatar: http://pyconcn.qiniudn.com/zoomquiet/stuff14/id/sz-laoqi.jpg?imageView2/2/h/80
-  intro: 一个用python的程序员。正在撰写python的学习教程。请看www.itdiffer.com
+  intro: 一个用python的程序员. 正在撰写python的学习教程. 请看www.itdiffer.com
   topic: 
-    title: python的一个好轮子——tornado 
-    preview: 介绍用于网站开发的tornado框架。
+    title: python的一个好轮子---tornado 
+    preview: 介绍用于网站开发的tornado框架. 
 
 
 ####################################################################
