--- a/src/data/_agenda.yaml
+++ b/src/data/_agenda.yaml
@@ -183,20 +183,35 @@ suzhou:
 #   |_| |_/____|
 ####################################################################
 hangzhou:
-  address: 杭州市滨江区江南大道‎ 
-  address_en: 杭州市滨江区江南大道‎
-  venue: 诺基亚通信杭州全球研发中心
-  venue_en: 诺基亚通信杭州全球研发中心
-  traffic: 待定
+  address: 杭州市滨江区信诚路567号 
+  address_en: 杭州市滨江区信诚路567号
+  venue: 诺基亚通信杭州全球研发中心 苏黎世会议室
+  venue_en: 诺基亚通信杭州全球研发中心 苏黎世会议室
+  traffic: 横街埠/ B支6,B支3路
+    - 江南大道环兴路口:294路(社区通勤高峰线),B支5路,352, 225(夜间线),113,315
+    - 信诚路江南大道口:107路
   traffic_en: TBD
   notices: "出于综合考虑,杭州推迟一周专注组织本地 Pythoneer 的聚会"
-  date: "2014-11-22 13:30~18:00"
+  date: "2014-11-22 13:00~18:00"
   noon:
-    - time: "13:00"
+    - time: "13:00 ~ 13:20"
       topic: 签到
       topic_en: Check in
   afternoon:
-    - { time: "13:20", speaker: id_shiyuanmin }
-    - { time: "14:00", speaker: id_hepochen }
-    - { time: "15:00", speaker: id_lifeng }
-    - { time: "15:40", speaker: id_linhuchong}
+    - time: "13:20 ~ 13:30"
+      topic: PyCon大会及活动组织方介绍
+      topic_en: PyCon大会及活动组织方介绍
+    - { time: "13:30 ~ 14:10", speaker: id_shiyuanmin }
+    - { time: "14:20 ~ 15:00", speaker: id_hepochen }
+    - time: "15:00 ~ 15:20"
+      topic: 茶歇
+      topic_en: Intermission
+    - { time: "15:20 ~ 16:00", speaker: id_lifeng }
+  lightening_talks:
+    - { time: "16:10 ~ 16:30", speaker: id_linhuchong}
+    - time: "~ 16:55" 
+      topic: TBD
+      topic_en: TBD
+    - time: "17:00" 
+      topic: 合影结束
+      topic_en: 合影结束
