--- a/src/data/_sponsors.yaml
+++ b/src/data/_sponsors.yaml
@@ -192,3 +192,9 @@
   link: http://www.jikexueyuan.com
   intro: "极客学院是中国最大的IT职业在线教育平台,涵盖300多门市场最火的技术开发课程 ,上线至今已成功帮助 18w 移动开发者提升了自身的技术开发实力. 极客学院已与微软,触控科技等多家大型互联网公司达成战略合作. 创始团队出版过中国大陆第一本Android教材,做过中国最早的Android线下企业培训和学生培训;具有极为丰富的线上培训和线下培训实战经验. "
   intro_en: "jikexueyuan is the biggest IT profession online education platform of China, covers more than 300 of the most popular technology development course, up to now it has already helped 300,000 developer to improve themself development capability. jikexueyuan have reached a strategic cooperation with Microsoft & CHUKONG technology Co., & etc.. The founder team has been published the first teaching material of Android, and Organize the earliest offline Android training for enterprise & students, have a wealth of experience in online&offline training."
+-
+  level_bronze: 1
+  level: bronze
+  logo: http://pyconcn.qiniudn.com/zoomquiet/stuff14/logo/bj-yue-pod-logo.jpg?imageView2/2/w/120
+  link: http://www.ruiking.com
+  intro: 北京锐和信科技有限公司成立于2013年,团队由来自腾讯和易车的几个技术大拿组成,专注于做智能产品. 公司以"锐意进取,和气生财,信用至上"为目标,希望通过我们的专业水平和不懈努力,做出用户需要的产品. 自成立以来,一直致力于悦POD 的开发设计,希望产品能给大家带来便利,让生活回归本质. 
