--- a/src/data/_sponsors.yaml
+++ b/src/data/_sponsors.yaml
@@ -198,3 +198,10 @@
   logo: http://pyconcn.qiniudn.com/zoomquiet/stuff14/logo/bj-yue-pod-logo.jpg?imageView2/2/w/120
   link: http://www.ruiking.com
   intro: 北京锐和信科技有限公司成立于2013年,团队由来自腾讯和易车的几个技术大拿组成,专注于做智能产品. 公司以"锐意进取,和气生财,信用至上"为目标,希望通过我们的专业水平和不懈努力,做出用户需要的产品. 自成立以来,一直致力于悦POD 的开发设计,希望产品能给大家带来便利,让生活回归本质. 
+
+-
+  level_bronze: 1
+  level: bronze
+  logo: http://pyconcn.qiniudn.com/zoomquiet/stuff14/logo/ucloud-logo.png?imageView2/2/w/120
+  link: http://www.ucloud.cn
+  intro: UCloud是中国最为领先的IaaS(基础云计算)服务商,一直专注于云计算领域产品的研发与运营服务. 自成立以来,UCloud专注于服务中国互联网企业用户,推出了高IO云主机,缓存计算,SDN,混合云部署等创新性产品;目前已有数以万家企业级用户和创业团队将其核心业务部署并运营在UCloud云平台上.  UCloud的客户遍及游戏,电商,移动互联网,PaaS,SaaS等多个行业,通过其对于用户技术运营的深刻理解,推出适合行业特性的产品与服务,在各个领域取得了绝对领先的地位.  
