--- a/src/data/_agenda.yaml
+++ b/src/data/_agenda.yaml
@@ -156,14 +156,14 @@ zhuhai:
 #   |____/____|
 ####################################################################
 suzhou:
-  address: 待定
-  address_en: TBD
+  address: 江苏省苏州市仁爱路258号
+  address_en: 258 Ren'ai Rd, Wuzhong, Suzhou, Jiangsu, China, 215123
   venue: 独墅湖图书馆
-  venue_en: TBD
-  traffic: 待定
-  traffic_en: TBD
-  notices: "只有半天..."
-  date: 2014-11-15 13:30~18:00
+  venue_en: Dushu Lake Library
+  traffic: 独墅湖图书馆(110路北线; 110路南线; 146路; 156路; 176路; 178路; 快线2号)，中科大西(180路)
+  traffic_en: Dushu Lake Library (110 North Route; 110 South Route; 146; 156; 176; 178; Quick 2)，USTC West(180)
+  notices: "欢迎参加！"
+  date: 2014-11-15 13:00~17:00
   noon:
     - time: "13:00 ~ 13:30"
       topic: 签到
