--- a/src/data/_sponsors.yaml
+++ b/src/data/_sponsors.yaml
@@ -13,7 +13,7 @@
   level: partner
   logo: http://pyconcn.qiniudn.com/zoomquiet/stuff14/logo/cstnet-logo.png?imageView2/2/w/200
   link: http://www.cstnet.net.cn/overview.htm
-  intro: "中国科技网是中国科学院领导下的学术性,非盈利的科研计算机网络. 作为中国互联网事业的先行者,中国科技网(CSTNET)将一如既往地提供优质,高效的网络服务,为您开创全新的网络世界,与广大用户共享,共赢,共发展. "
+  intro: "中国科技网是中国科学院领导下的学术性,非盈利的科研计算机网络. 中国科技网(CSTNET)已经成为中国互联网行业快速发展的一支重要力量,为广大用户提供互联网接入,小区宽带,科研数据中心(IDC),网络管理与安全服务,视频会议系统,邮件系统,桌面会议系统,会议服务平台,科研在线文档库,组织通讯录,实验室信息系统,科研主页,科信,中国科技网通行证等服务,以及网络前沿技术研发等,为国家科学技术的创新发展提供基础性的信息化支撑与保障. "
 
 
 #########################################
