add conference Volunteers data

--- a/src/data/_message.yaml
+++ b/src/data/_message.yaml
@@ -158,3 +158,5 @@ organizers: 组织者
 organizers_en: Coordinators
 technicians: 技术组
 technicians_en: Technical Volunteers
+conference: 会务组
+conference_en: Conference Volunteers
