add my en intro

--- a/src/data/_volunteers.yaml
+++ b/src/data/_volunteers.yaml
@@ -38,6 +38,7 @@
   avatar: http://pyconcn.qiniudn.com/coyote/images/myphoto.png?imageView2/2/h/80
   role_technician: 1
   intro: 北京天融信 程序员; Python爱好者,网络安全初学者;崇尚菜鸟先飞,为pycon贡献微薄之力;
+  intro_en: Topsec Coder; Pythoneer, network security student; Clumsy birds have to start flying early is my motto, i will do my best to PyCon China
   weibo: http://weibo.com/coytoe
   github: https://github.com/chencoyote
 -
