--- a/src/data/_speakers.yaml
+++ b/src/data/_speakers.yaml
@@ -462,7 +462,7 @@ id_taowen:
   city_zhuhai: 1
   city: 珠海
   city_en: Zhuhai
-  avatar: http://pyconcn.qiniudn.com/zoomquiet/stuff14/cpug-logo-188x188.png?imageView2/2/h/80
+  avatar: http://pyconcn.qiniudn.com/zoomquiet/stuff14/zh-taowen.jpg?imageView2/2/h/80
   intro: 在腾讯游戏运营部,使用python做运营开发. 曾经用python搞过电子商城,营销平台,手机代理程序等各类型应用
   intro_en: Operation developer at Tencent Game, having used python to build e-mall, markerting platform, mobile proxy app, etc
   topic:
