bower: 依赖 normalize.css

--- a/bower.json
+++ b/bower.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "font-awesome": "~4.2.0",
     "bourbon": "~4.0.2",
-    "neat": "~1.7.0"
+    "neat": "~1.7.0",
+    "normalize.css": "~3.0.2"
   }
 }
