--- a/src/data/_sponsors.yaml
+++ b/src/data/_sponsors.yaml
@@ -93,7 +93,7 @@
   level: gold
   logo: http://pyconcn.qiniudn.com/zoomquiet/stuff14/logo/DeepGlint-logo.png?imageView2/2/w/120
   link: http://www.deepglint.com/
-  intro: "深瞳消费者行为分析系统;在电商大行其道的今天,我们为传统零售商提供更精准的数据和更加客观的消费者行为分析,使得零售商能够为消费者提供更加精准高效的服务. 深瞳无人监控安防系统;当危险临近时,我们不再需要靠运气被中控室里的保安在几万路视频里正好看到,深瞳系统的 三维传感器将像机器人一样,实时的代替人'看'着每一个场景里的一举一动"
+  intro: "格灵深瞳让计算机开始看懂我们人类的世界,理解人的行为和轨迹. 我们现阶段聚焦于将全球领先的人工智能及模式识别技术应用到安防,交通,零售等领域. 格灵深瞳通过三维视觉感知技术可以实现对人物的精确检测,跟踪,动作姿态的检测和分析,人物运动轨迹检测和分析. "
   intro_en: "Deepglint customer behavior analysis system; Today electronic commerce is very popular, Deepglint provide traditional retailers with accurate data that is more objective behavior analysis, the data can make traditional retailers provide customer with more accurate and more efficient service."
 -
   level_gold: 1
